--- a/src/styles/5 layer1/Elements6.css
+++ b/src/styles/5 layer1/Elements6.css
@@ -1,37 +1,29 @@
-.neural-networks {
-    position: absolute;
-    width: 100%;
-    height: auto;
-    max-width: 1198px;
-    left: 555px;
-    top: 6180px;
-
-}
-
-.neural-networks-text {
-    font-family: 'Object Sans';
-    font-style: normal;
-    font-weight: 800;
-    font-size: 80px;
-    line-height: 88px;
-    text-align: right;
-    color: #FFFFFF;
+.text6 {
+  position: absolute;
+  width: 100%;
+  height: auto;
+  max-width: 1198px;
+  left: 373px;
+  top: 6121px;
+  transform: scale(0.9);
 }
 
 .gradient6 {
   position: absolute;
-  width: 2303.8px;
-  height: 2672.6px;
-  left: -17.4px;
-  top: 5875.5px;
+  width: 100%;
+  height: auto;
+  max-width: 2303.8px;
+  left: 0;
+  top: 6010.5px;
 }
 
 .noise6 {
     position: absolute;
-    width: 1728px;
-    height: 1749px;
+    width: 100%;
+    height: 1669px;
+    max-width: 1728px;
     left: 0px;
-    top: 6047px;
+    top: 6035px;
     background: url(../../images/6-noise.png), #D9D9D9;
     mix-blend-mode: overlay;
     opacity: 0.5;
@@ -39,16 +31,18 @@
 
 .powered-by {
     position: absolute;
-    width: 315px;
-    height: 51px;
-    left: 707px;
-    top: 7638px;
+    width: 100%;
+    height: auto;
+    max-width: 315px;
+    left: 50%;
+    top: 7660px;
     font-family: 'Object Sans';
     font-style: normal;
     font-weight: 400;
     font-size: 28.43px;
     line-height: 38px;
     color: #FFFFFF;
+    transform: translate(-50%, 0) scale(0.9);
   }
   
   .powered-by a {
@@ -62,10 +56,11 @@
 
   .welcome-container {
   position: absolute;
-  width: 1291px;
-  height: 207px;
-  left: 39px;
-  top: 6582px;
+  width: 100%;
+  height: auto;
+  max-width: 1291px;
+  left: 2px;
+  top: 6675px;
 }
 
 .welcome-text {
